# python-project-83

./: .env-sample  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: workflow.yml
page_analyzer/: __init__.py  app.py  data_base.py  normalize_url.py  parser.py
page_analyzer/templates/: base.html  footer.html  header.html  index.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html
